--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,9 @@ numpy==1.26.4
 pyarrow==14.0.2
 pandas>=2.2.2
 openpyxl==3.1.2
-requests>=2.25.0
+requests>=2.32.5
 python-dotenv>=1.0.1
 pyyaml>=6.0
 langchain>=0.3.18
-langchain-community
+langchain-community>=0.3.18
 langchain-openai
