--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-openai==1.60.2
+openai==1.99.5
 
 google==3.0.0
 google-genai==1.13.0
@@ -16,3 +16,5 @@ openpyxl==3.1.2
 requests>=2.32.5
 python-dotenv>=1.0.1
 pyyaml>=6.0
+litellm==1.79.0
+boto3>=1.28.57
